# jenova-ca

./: .editorconfig  .gitignore  ADRE_DOCUMENTATION.md  AUDIT_REPORT.md  CHANGELOG.md  CODEBASE_REVIEW_REPORT.md  CODERABBITAI_STYLE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  MODULAR_INTEGRATION.md  Makefile  PR_SUMMARY.md  QUICKSTART.md  README.md  README_BUBBLETEA.md  README_VENV.md  RELEASE_NOTES_4.1.0.md  REVIEW_DOCUMENTATION_README.md  SESSION_HANDOFF.md  TESTING.md  USAGE_EXAMPLES.md  build_proto.py  build_tui.sh  config.example.yaml  debug_model_path.py  demo_ui.py  embedding_test.py  finetune_train.jsonl  fix_chromadb_compat.py  fix_chromadb_py314_compat.py  gitignore.txt  implementation_summary.md  install-termux.sh  install.sh  (+15 more)
.devdocs/: ARCHITECTURE.md  BRIEFING.md  DECISIONS_LOG.md  PLANS.md  PROGRESS.md  SESSION_HANDOFF.md  SUMMARIES.md  TESTS.md  TODOS.md
.devdocs/workers/refactorer/: D3_session_20260214_optimization_safety.md  D3_session_204_wiring_gap_analysis.md  README.md  behavior_preservation_verification.md  code_quality_improvements.md  refactoring_logs.md  refactoring_plans.md  session_log.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: THREADING_FIX.md  VERSION_3.0.2_SUMMARY.md
examples/plugins/example_plugin/: README.md  __init__.py  plugin.yaml
finetune/: DEPRECATED.md  README.md  __init__.py  data.py  prepare_data.py  run_finetune.py  train.py
models/: README.md
src/jenova/: __init__.py  compat_py314.py  default_api.py  exceptions.py  llm_interface.py  main.py  main.py.backup_debug  main_bubbletea.py  tools.py
src/jenova/analysis/: __init__.py  code_metrics.py  command_disambiguator.py  context_optimizer.py  intent_classifier.py  security_scanner.py
src/jenova/assumptions/: __init__.py  manager.py  types.py
src/jenova/automation/: __init__.py  custom_commands.py  hooks_system.py  template_engine.py  workflow_library.py
src/jenova/branching/: __init__.py  branch_manager.py  branch_navigator.py
src/jenova/code_tools/: __init__.py  code_parser.py  codebase_mapper.py  file_editor.py  interactive_terminal.py  refactoring_engine.py  syntax_highlighter.py
src/jenova/cognitive_engine/: __init__.py  context_organizer.py  context_scorer.py  cpa.py  document_processor.py  engine.py  integration_layer.py  memory_search.py  query_analyzer.py  rag_system.py  scheduler.py  semantic_analyzer.py
src/jenova/collaboration/: __init__.py  access_control.py  collaboration_manager.py  sync_protocol.py  user_session.py
src/jenova/config/: __init__.py  config_schema.py  constants.py  main_config.yaml  main_config.yaml.backup_cpu_only_20251030_141030  models.py  persona.yaml
src/jenova/core/: __init__.py  adapters.py  application.py  architecture.py  bootstrap.py  container.py  context_organizer.py  context_scorer.py  engine.py  integration.py  knowledge.py  lifecycle.py  planning.py  query_analyzer.py  response.py  scheduler.py  task_executor.py
src/jenova/cortex/: __init__.py  clustering.py  cortex.py  graph_components.py  graph_metrics.py  proactive_engine.py
src/jenova/docs/: RAG.md
src/jenova/embeddings/: __init__.py  model.py  types.py
src/jenova/emotional/: __init__.py  emotion_detector.py  response_generator.py  state_manager.py
src/jenova/git_tools/: __init__.py  branch_manager.py  commit_assistant.py  diff_analyzer.py  git_interface.py  hooks_manager.py
src/jenova/graph/: __init__.py  graph.py  llm_schemas.py  proactive.py  types.py
src/jenova/infrastructure/: __init__.py  circuit_breaker.py  data_validator.py  error_handler.py  file_manager.py  health_monitor.py  metrics_collector.py  timeout_manager.py
src/jenova/insights/: __init__.py  concerns.py  manager.py  types.py
src/jenova/learning/: __init__.py  contextual_engine.py
src/jenova/llm/: __init__.py  cuda_manager.py  distributed_llm_interface.py  embedding_manager.py  interface.py  llm_interface.py  model_manager.py  smart_retry.py  types.py
src/jenova/memory/: __init__.py  backup_manager.py  base_memory.py  compression_manager.py  context_compression.py  context_window_manager.py  deduplication.py  distributed_memory_search.py  episodic.py  memory.py  memory_manager.py  procedural.py  semantic.py  types.py
src/jenova/network/: __init__.py  discovery.py  metrics.py  peer_manager.py  rpc_client.py  rpc_service.py  security.py  security_store.py
src/jenova/observability/: __init__.py  metrics_exporter.py  tracing.py
src/jenova/optimization/: __init__.py  bayesian_optimizer.py  performance_db.py  (+2 more)
src/jenova_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: README.md  __init__.py  conftest.py  pytest.ini  test_analysis.py  test_automation.py  test_basic.py  test_branching.py  test_code_tools.py  test_cognitive_engine.py  test_collaboration.py  test_config_validation.py  test_context_window.py  test_core.py  test_cortex.py  test_emotional_intelligence.py  test_git_integration.py  test_hardware_detection.py  test_infrastructure.py  test_llm.py  test_memory.py  test_modular_architecture.py  test_network.py  test_orchestration.py  test_plugins.py  test_security.py  test_self_optimization.py  test_tools.py  test_visualization.py
tests/benchmarks/: __init__.py  test_performance.py  test_utility_performance.py
tests/integration/: __init__.py  conftest.py  test_cognitive_flow.py  test_engine.py  test_knowledge.py
tests/performance/: __init__.py  test_cache_performance.py
tests/security/: test_adversarial.py
tests/unit/: test_assumptions.py  test_cache.py  test_context_organizer.py  test_context_scorer.py  test_d2_features.py  test_engine_planning.py  test_exceptions.py  test_grammar.py  test_graph_advanced.py  test_insights.py  test_integration.py  test_memory.py  test_migrations.py  test_performance.py  test_proactive.py  test_query_analyzer.py  test_response_rag.py  test_sanitization.py  test_scheduler.py  test_security.py  test_tools.py  test_validation.py
tui/: go.mod  main.go
(+88 files in other folders)
