[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenova-ai"
version = "3.2.0"
authors = [
    {name = "orpheus497"}
]
description = "The JENOVA Cognitive Architecture with a dynamic Insight Engine and self-optimizing context."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "llama-cpp-python",
    "chromadb>=0.3.23",  # Our pydantic_compat module handles Pydantic v2 compatibility
    "sentence-transformers",
    "torch",
    "rich",
    "PyYAML",
    "numpy",
    "selenium",
    "webdriver-manager",
    "requests",
    "networkx",
    "pydantic-settings",
    "overrides",
]

[project.urls]
Homepage = "https://github.com/orpheus497/jenova-ai"
Repository = "https://github.com/orpheus497/jenova-ai"

[project.scripts]
jenova = "jenova.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
